<resources>
    <string name="app_name">VaCay Carpe Diem</string>
    <string name="app_package">VaCay Carpe Diem</string>
    <string name="paypal_client_id">AexEJ3-oVFtiToF6YcrYWNCUDgbiJi84VaT4pqjShl1v1BBRbnxq8JTo3Ncz3b1RiK8yIQtaRfJtFZT4</string>
    <string name="sandbox_account_email">cayleywetzig-facilitator@gmail.com</string>
    <string name="secret">EKLwWtG7mWiX6r81kIYRld_9L8CDZb5m0SwvcMx2O6jTc6SPOPnbvWQS8dbkEYsVjJPLKet6nThh_WAM</string>
    <string name="entrar_com_linkedin">Entrar com Linkedin</string>
    <string name="loading">loading...</string>
    <string name="welcome_text">teste</string>
    <string name="buy_product"><u><i><b>Buy Products</b></i></u></string>
    <string name="carmode_description">Car Mode? Click on the car to turn it on. You can speak messages, hear responses &amp; send recorded messages.\n\n Say \"<b>NEW</b>\" to initiate a new message. Say \"<b>SEND</b>\" to send it.</string>
    <string name="codeversed_logo">Codeversed Logo</string>
    <string name="normal">Normal</string>
    <string name="big_text_style">Big Text Style</string>
    <string name="big_picture_style">Big Picture Style</string>
    <string name="inbox_style">Inbox Style</string>
    <string name="custom_view">Custom View</string>
    <string name="error_opening_url">Error opening link</string>
    <string name="title_activity_share">Share</string>
    <string name="product_description">Dry, lifeless hair? Change it. Revive it. Experience the power of L’Oréal Paris Extraordinary Oil with Oil Complex – Coconut, Argan, Chamomile, Amla, Soja, and Sunflower. Deep nourishment without the weight for incredibly lustrous, touchably soft hair.
AQUA / WATER / EAU, SODIUM LAURETH SULFATE, COCO-BETAINE, LAURETH-5 CARBOXYLIC ACID, COCAMIDE MIPA, SODIUM CHLORIDE, ISOSTEARYL, NEOPENTANOATE, PARFUM / FRAGRANCE, POLYQUATERNIUM-10, AMODIMETHICONE, SODIUM BENZOATE, HEXYLENE GLYCOL, PEG-55 PROPYLENE GLYCOL OLEATE, PROPYLENE GLYCOL, PEG-60 HYDROGENATED CASTOR OIL, SALICYLIC ACID, CAPRYLIC/CAPRIC TRIGLYCERIDE, SODIUM HYDROXIDE, ARGININE</string>
    <string name="title_activity_data">Data</string>
    <string name="title_activity_chart">Chart</string>
    <string name="title_activity_summary">Summary</string>
    <string name="ok">OK</string>
    <string name="cancel"><i>Cancel</i></string>
    <string name="ok_update">OK <![CDATA[&]]> UPDATE</string>
    <string name="neckbackmassage">Neck <![CDATA[&]]> Back Massage</string>
    <string name="error">Connecting to the server failed.\nPlease try again.</string>
    <string name="chatting_error">The connection to the chat server has been shut down.</string>
    <string name="chatting_success">It was connected to the chat server.</string>
    <string name="chatting_connecting">It is being connected to the chat server.</string>
    <string name="email_exist">This email already exists so you are updating your profile.</string>
    <string name="connect_success">Successfully registered to server.</string>
    <string name="invalidEmail">Please enter a valid email address.</string>
    <string name="not_authenticate">E-mail has not been certified.</string>
    <string name="photo_upload_fail">Picture registration failed.</string>
    <string name="please_notice">The video selected is first copied to the Temp directory, then is compressed and moved to the Compressed Videos directory and finally the Temp directory is empty.</string>
    <string name="photo_upload_success">The uploaded file was successful.</string>
    <string name="unregistered_user">Unregistered user.</string>
    <string name="wrong_auth">Please input verification code correctly.</string>
    <string name="register_fail">Registration failed.\nTry again later.</string>
    <string name="checkPwd">Please enter the password correctly.</string>
    <string name="update_success">Succeed to update profile.</string>
    <string name="skiing_snowboarding">Ski <![CDATA[&]]> Snowboard</string>
    <string name="skiing_snowboarding_with">Ski <![CDATA[&]]>\nSnowboard\n with :</string>
    <string name="welcome">Welcome! Please connect both your LinkedIn <![CDATA[&]]> Facebook accounts for our security standards.</string>
    <string name="welcome_login">Welcome! Please write your profile contents correctly based on your LinkedIn <![CDATA[&]]> Facebook accounts for our security standards.</string>
    <string name="title_activity_login">VaCay</string>
    <string name="facebook_app_id">1841543369460792</string>
    <string name="survey">TELL US ABOUT YOURSELF.\nWhy are you joining VaCay? \n(Click on any boxes that apply)</string>
    <string name="questa">I’ve relocated offices and looking to meet new friends.</string>
    <string name="questb">Haven’t relocated but want to make new work friends.</string>
    <string name="questc">I travel a lot for work and want to meet colleagues in other offices that want to grab dinner at the top restaurants.</string>
    <string name="questdd">I’m looking for colleagues that want to do the same activities as me.</string>
    <string name="questbb">Want to make new friends.</string>
    <string name="questcc">I want to make new Foodie Friends.</string>
    <string name="questddd">I want to make friends that like the same activities as I do.</string>
    <string name="queste">I’m busy and want my pampering to come to me or my hotel.</string>
    <string name="messagefromfriend">Hi James, here are the uploaded screens with the previous ones.Please let me know what do you think about the icons.I made the notes about some.Thanks and let me know a good time to talk tomorrow.Thanks again. </string>
    <string name="messagefromfriendB">How do you do? I have read your description and felt so desire to develop your project. I am Android/iOS developer and expert of Mobile area. I hope you not to regret about me. Looking forward to your glad reply. Best regards.</string>
    <string name="hint">Please review the service provider below, price <![CDATA[&]]> type of service</string>
    <string name="hint1">Click here for view</string>
    <string name="beautydescription">If you’d like to select me, please click on the “Request” box below. I will then ask you where you want me to come to give you this service.</string>
    <string name="address0">1722 Sacramento St, San Francisco, CA 94109</string>
    <string name="address1">800 North Point St, San Francisco, CA 94109</string>
    <string name="golfint"><b><u>Golf</u></b></string>
    <string name="tennisint"><b><u>Tennis</u></b></string>
    <string name="runint"><b><u>Run</u></b></string>
    <string name="skiint"><b><u>Ski <![CDATA[&]]> Snowboard</u></b></string>
    <string name="surveybutton"><b><u>Survey</u></b></string>
    <string name="surveybutton2"><i><u>Click here to respond <b>Survey</b> to</u></i></string>
    <string name="action_settings">Settings</string>
    <string name="label_btn_find">Find</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_btn_find">Find</string>
    <string name="pinkwhite">Pink <![CDATA[&]]> White</string>
    <string name="accept">ACCEPT <![CDATA[&]]> REQUEST</string>
    <string name="date">Request date <![CDATA[&]]> time</string>
    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
    <string name="aa">https://www.google.com/maps/place/Acquerello/@37.7915485,-122.421442,15z/data=!4m5!3m4!1s0x0:0xa5a20b813854425d!8m2!3d37.7915485!4d-122.421442</string>
    <string name="bb">https://www.google.com/maps/place/Boulevard/@37.79332,-122.392761,15z/data=!4m5!3m4!1s0x0:0x34b391d08d9fe6bc!8m2!3d37.79332!4d-122.392761</string>
    <string name="dd">https://www.google.com/maps/place/Delarosa/@37.8003028,-122.4391249,15z/data=!4m5!3m4!1s0x0:0xe1165ec97a6da48!8m2!3d37.8003028!4d-122.4391249</string>
    <string name="gg">https://www.google.com/maps/place/Restaurant+Gary+Danko/@37.8058724,-122.4206313,15z/data=!4m5!3m4!1s0x0:0x8ee57d9f647dbc1!8m2!3d37.8058724!4d-122.4206313</string>
    <string name="hh">https://www.google.com/maps/place/Hog+Island+Oyster+Co/@37.7960308,-122.3935689,15z/data=!4m5!3m4!1s0x0:0x830980e627627a81!8m2!3d37.7960308!4d-122.3935689</string>
    <string name="hhh">https://www.google.com/maps/place/House+of+Prime+Rib/@37.7933928,-122.4227072,15z/data=!4m5!3m4!1s0x0:0x3ef25abd292344d9!8m2!3d37.7933928!4d-122.4227072</string>
    <string name="ll">https://www.google.com/maps/place/La+Folie/@37.798144,-122.4220082,15z/data=!4m5!3m4!1s0x0:0x88d3a2ab149fb6b4!8m2!3d37.798144!4d-122.4220082</string>
    <string name="nn">https://www.google.com/maps/place/La+Folie/@37.798144,-122.4220082,15z/data=!4m5!3m4!1s0x0:0x88d3a2ab149fb6b4!8m2!3d37.798144!4d-122.4220082</string>
    <string name="ss">https://www.google.com/maps/place/Saison/@37.7795354,-122.392263,15z/data=!4m5!3m4!1s0x0:0x77a00452793abd5c!8m2!3d37.7795354!4d-122.392263</string>
    <string name="sss">https://www.google.com/maps/place/Saison/@37.7795354,-122.392263,15z/data=!4m5!3m4!1s0x0:0x77a00452793abd5c!8m2!3d37.7795354!4d-122.392263</string>
    <string name="tt">https://www.google.com/maps/place/Saison/@37.7795354,-122.392263,15z/data=!4m5!3m4!1s0x0:0x77a00452793abd5c!8m2!3d37.7795354!4d-122.392263</string>
    <string name="ttt">https://www.google.com/maps/place/Tony\'s+Pizza+Napoletana/@37.8003257,-122.408985,15z/data=!4m5!3m4!1s0x0:0xbfb3fcde3487fb40!8m2!3d37.8003257!4d122.408985</string>
    <string name="menua">http://www.acquerello.com/menus/PrixFixeMenu.pdf</string>
    <string name="menub">http://www.boulevardrestaurant.com/menus/#boulevard-menus</string>
    <string name="menud">http://www.delarosasf.com/</string>
    <string name="menug">http://places.singleplatform.com/gary-danko-2/menu?ref=google</string>
    <string name="menuh">https://hogislandoysters.com/</string>
    <string name="menuhh">http://houseofprimerib.net/</string>
    <string name="menul">http://www.lafolie.com/menus/#la-folie-menus3</string>
    <string name="menun">http://www.nopasf.com/menu/dinner</string>
    <string name="menus">https://www.zomato.com/san-francisco/saison-soma/menu?utm_source=Google<![CDATA[&]]>utm_medium=Local<![CDATA[&]]>utm_campaign=GoogleMenus</string>
    <string name="menuss">http://www.sprucesf.com/food_wine</string>
    <string name="menut">http://www.thehse.com/</string>
    <string name="menutt">http://tonyspizzanapoletana.com/menu/</string>
    <string name="opa">http://www.opentable.com/acquerello?ref=1068</string>
    <string name="opb">http://www.opentable.com/r/boulevard-san-francisco</string>
    <string name="opd">http://www.opentable.com/r/delarosas-downtown-san-francisco</string>
    <string name="opg">http://www.opentable.com/gary-danko</string>
    <string name="oph"></string>
    <string name="ophh">http://www.opentable.com/san-francisco-restaurants?mn=5<![CDATA[&]]>ref=9859<![CDATA[&]]>sp=ppc_g_sf_cuis<![CDATA[&]]>gclid=Cj0KEQjwnKzABRDy2pb7nPSazdsBEiQAI4lZQCP0KHe-hPJly9uimsJfKJeIko5cFhj8qzcUmWaI8koaAq9C8P8HAQ</string>
    <string name="opl">http://www.lafolie.com/menus/#la-folie-menus3</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>