<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#417f71"
    tools:context="com.mv.vacay.main.SurveyQuestActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/white_fillrect">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            >
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:gravity="center"
                android:padding="15dp"
                android:background="@drawable/green_fillround"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0px"
        android:layout_weight="1">
        <CheckBox
            android:id="@+id/checkboxA"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/questa"
            android:textSize="16sp"
            android:textColor="#4e887b"
            android:checked="false"
            android:paddingStart="15dp"
            android:paddingRight="10dp"
            android:background="@drawable/green_strokerect"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1.5dp"/>
        <CheckBox
            android:id="@+id/checkboxB"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/questbb"
            android:textSize="16sp"
            android:textColor="#4e887b"
            android:checked="false"
            android:paddingRight="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/green_strokerect"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1.5dp"/>
        <CheckBox
            android:id="@+id/checkboxC"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/questcc"
            android:textSize="16sp"
            android:textColor="#4e887b"
            android:checked="false"
            android:paddingRight="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/green_strokerect"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1.5dp"/>
        <CheckBox
            android:id="@+id/checkboxD"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/questddd"
            android:textSize="16sp"
            android:textColor="#4e887b"
            android:checked="false"
            android:paddingRight="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/green_strokerect"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1.5dp"/>
        <CheckBox
            android:id="@+id/checkboxE"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="@string/queste"
            android:textSize="16sp"
            android:textColor="#4e887b"
            android:checked="false"
            android:paddingRight="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/green_strokerect"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1.5dp"/>
        <CheckBox
            android:id="@+id/checkboxF"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="I'm looking to date someone with similar interests."
            android:textSize="16sp"
            android:textColor="#4e887b"
            android:checked="false"
            android:visibility="gone"
            android:paddingRight="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/green_strokerect"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1.5dp"/>
        <CheckBox
            android:id="@+id/checkboxG"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:text="My boyfriend/girlfriend and I are looking for more couple friends."
            android:textSize="16sp"
            android:visibility="gone"
            android:textColor="#4e887b"
            android:checked="false"
            android:paddingRight="10dp"
            android:paddingStart="15dp"
            android:background="@drawable/green_strokerect"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="1.5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_fillrect"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp">
        <TextView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:layout_margin="3dp"
            android:textColor="#fff"
            android:background="@drawable/green_fillround"/>
    </LinearLayout>
</LinearLayout>
