<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/backgroundregister2"
    tools:context="com.mv.vacay.main.ServiceProviderSignupLoginActivity">

    <!-- Login progress -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ViewSwitcher
                android:visibility="visible"
                android:id="@+id/viewSwitcher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out">

                <com.mv.vacay.widgets.KenBurnsView
                    android:id="@+id/img1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/city0" />

                <!--<com.mv.vacay.widgets.KenBurnsView-->
                <!--android:id="@+id/img2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:src="@drawable/img2" />-->
                <com.mv.vacay.widgets.KenBurnsView
                    android:id="@+id/img3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/nice" />

            </ViewSwitcher>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_roundrect"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="4dp"
            android:visibility="gone"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="110dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="#ff02b3"
                    android:paddingLeft="8dp"
                    android:textColorHint="#ff02b3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:textColor="#ff02b3"
                    android:textColorHint="#ff02b3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Login as a provider"
                android:background="@drawable/login_button_fillrect"
                android:textColor="#fff"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotPassword"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Forgot Password"
                android:textColor="#7fff0284"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_confirm_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_fillrect"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="4dp"
            android:visibility="gone"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="110dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/emailConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="#ff02b3"
                    android:paddingLeft="8dp"
                    android:textColorHint="#ff02b3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Full Name (for ex. Sara Martins)"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:textColor="#ff02b3"
                    android:textColorHint="#ff02b3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cityContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="City Name (for ex. San Francisco)"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:textColor="#ff02b3"
                    android:textColorHint="#ff02b3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/genderContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Gender (Male/Female)"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:textColor="#ff02b3"
                    android:textColorHint="#ff02b3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/companyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Company Name (for ex. Ulta)"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
                    android:textColor="#ff02b3"
                    android:textColorHint="#ff02b3"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="13dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/back2"/>
                <TextView
                    android:id="@+id/confirm"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Verify"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/login_button_fillrect"
                    android:textColor="#fff"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
